// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props with links are not passed 1`] = `
<ul>
  <li>
    <a
      href="https://www.itsmycargo.com/en/ourstory"
      target="_parent"
    >
      About Us
    </a>
  </li>
  <li>
    <a
      href="https://www.itsmycargo.com/en/contact"
      target="_parent"
    >
      Imprint
    </a>
  </li>
  <li>
    <a
      href="https://www.itsmycargo.com/legal/terms-of-service"
      target="_parent"
    >
      Terms and Conditions
    </a>
  </li>
  <li>
    <a
      href="https://itsmycargo.com/en/privacy"
      target="_parent"
    >
      Privacy Policy
    </a>
  </li>
</ul>
`;

exports[`when props with links are passed 1`] = `
<ul>
  <li>
    <a
      href="1"
      target="_parent"
    >
      About Us
    </a>
  </li>
  <li>
    <a
      href="2"
      target="_parent"
    >
      Imprint
    </a>
  </li>
  <li>
    <a
      href="3"
      target="_parent"
    >
      Terms and Conditions
    </a>
  </li>
  <li>
    <a
      href="4"
      target="_parent"
    >
      Privacy Policy
    </a>
  </li>
</ul>
`;
